# gimpsep-photoshop-betterthan-gimp

./: .gitignore  CMakeLists.txt  CannyEdgeDetection.cpp  CannyEdgeDetection.h  Dilate.cpp  DilateImage.cpp  DilateImage.h  Erode.cpp  ErodeImage.cpp  ErodeImage.h  Folder.cpp  Folder.h  Image.cpp  Image.h  OpenCV.cpp  OpenCV.h  Panorama.cpp  Resize.cpp  Resize.h  ResizeImage.cpp  ResizeImage.h  Stitching.cpp  Stitching.h  main.cpp  test.cpp
cpp/: OpenCV.cpp  resize.cpp
enc_temp_folder/1492a027e27dca7e4cc4de7b982c5ced/: main.cpp
header/: OpenCV.h  resize.h
